--- a/Biruang/style.css
+++ b/Biruang/style.css
@@ -245,3 +245,18 @@ img {
     float: left;
     margin-left: 2.6%;
 }
+.block3_main article:first-child {
+    margin-left: 0;
+}
+.block3_main article img {
+    display: block;
+    margin: 0 auto 20px auto;
+}
+.block3_main article h2 {
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 1.375em;
+    margin-bottom: 20px;
+   }
+.block3_main article p {
+    font-size: 0.875em;
+}
