--- a/Biruang/style.css
+++ b/Biruang/style.css
@@ -345,3 +345,46 @@ p.price-basket {
 .basket-btn {
     float: right;
 }
+
+.about {
+    margin-bottom: 60px;
+}
+
+.about article {
+    float: left;
+    width: 60%;
+}
+
+.about .map {
+    float: right;
+    width: 35%;
+}
+
+.about article h2 {
+    font-size: 1.375em;
+    font-weight: bold;
+    color: #67686d;
+    margin-bottom: 30px;
+}
+
+.about article p {
+    font-size: 0.875em;
+    color: #67686d;
+    margin-bottom: 20px;
+    font-style: italic;
+}
+
+.mapin {
+    position: relative;
+    padding-bottom: 75%; /*height / width из iframe*/
+    height: 0;
+    overflow: hidden;
+}
+
+.mapin iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
